--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <h1>Slang and Meaning</h1>
+      <h1 translate="no">Slang and Meaning</h1>
       <nav>
         <a href="#about">About</a>
         <a href="#examples">Examples</a>
@@ -23,7 +23,7 @@
       <h2>Discover modern slang and what it means</h2>
       <p>Search popular phrases, get definitions, and see examples in context.</p>
       <div class="search-wrap">
-        <input id="termInput" placeholder="Type a slang term (e.g.,bet)">
+        <input id="termInput" placeholder="Type a slang term">
         <button id="lookupBtn">Lookup</button>
       </div>
     </section>
@@ -42,7 +42,7 @@
 
     <section id="contact">
       <h3>Contact</h3>
-      <p>Want to contribute? Open an issue or send feedback.</p>
+      <p>Want to contribute? You can't for now.</p>
     </section>
   </main>
 
